# firesql

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  test.sql
.github/workflows/: cd.yml  ci.yml
firesql-cli/: Cargo.toml
firesql-cli/src/: arguments.rs  main.rs
firesql_cli/: Cargo.toml
firesql_cli/src/: main.rs
firesql_cli/src/app/: app.rs  mod.rs
firesql_cli/src/app/app/: query_editing_page.rs
firesql_core/: Cargo.toml
firesql_core/sql_grammar_diagram/: index.md
firesql_core/src/: lib.rs  sql_parser.rs  sql_runner.rs
firesql_core/src/sql_parser/: sql_grammar.pest  sql_grammar.rs  sql_grammar_diagram.ebnf
