[workspace]
members = ["firesql_core", "firesql-cli"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
firestore = "0.44"
gcloud-sdk = { version = "0.26.0", default-features = false, features = [
    "google-firestore-v1",
] }
tokio = { version = "1" }
futures = "0.3.31"
itertools = "0.13"
